# ARM-SOFT-Simulation

./: .gitignore  README.md
ros2_ws/src/prosthesis_description/: CMakeLists.txt  package.xml
ros2_ws/src/prosthesis_description/config/: gz_bridge.yaml  joy_node.yaml  prosthesis.rviz.yaml  prosthesis_controllers.yaml
ros2_ws/src/prosthesis_description/cv2sim/: cube.sdf  cv_arm_mover.py  cv_model_spawner.py  cylinder.sdf  cylinder.stl
ros2_ws/src/prosthesis_description/launch/: gazebo.launch.py  robot_state_publisher.launch.py  rviz.launch.py
ros2_ws/src/prosthesis_description/meshes/: A_PhalangeConstruction_Part_3.stl  A_PhalangeConstruction_Part_4.stl  A_PhalangeConstruction_Part_5.stl  A_PhalangeConstruction_Part_6.stl  FingerAssembly_Old.stl  Palm_main_body.stl  PhalangeConstruction _Part_4.stl  PhalangeConstruction _Part_4_2.stl  PhalangeConstruction_Part 2.stl  PhalangeConstruction_Part 3.stl  PhalangeConstruction_Part 4_2.stl  PhalangeConstruction_Part 5.stl  PhalangeConstruction_Part 6.stl  PhalangeConstruction_Part_3.stl  PhalangeConstruction_Part_5.stl  PhalangeConstruction_Part_6.stl  PhalangeConstructrion_Base.stl  PhalangePart_1.stl  PhalangeThumbPart1.stl  PhalangeThumbPart3.stl  SupportThumb.stl  forearm_final.stl
ros2_ws/src/prosthesis_description/model/: gazebo.xacro  parameters.xacro  prosthesis.gazebo  prosthesis.gazebo.urdf  prosthesis.urdf.xacro  useful_tags.xacro
ros2_ws/src/prosthesis_description/scripts/: fsr_broadcaster.py  gamepad_control.py  joint_state_printer.py  keyboard_control.py  motor_currents_extractor.py  movement_input.py  (+2 more)
(+3 files in other folders)
