<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prosthesis_description</name>
  <version>0.0.0</version>
  <description> Description of the simulated prosthesis to allow Rviz and Gazebo spawning.</description>
  <maintainer email="orianne.farinelli@epfl.ch">enaira</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
